--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,8 @@ edition = "2021"
 name = "mcp-dev-manager"
 path = "src/main.rs"
 
-[[bin]]
-name = "mcp-dev-manager-stdio"
-path = "src/bin/stdio_proxy.rs"
-
 [dependencies]
+clap = { version = "4", features = ["derive", "env"] }
 rmcp = { version = "0.8", features = ["server", "client", "transport-sse-server", "transport-sse-client-reqwest", "transport-io"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
