--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,8 @@ async-trait = "0.1"
 schemars = "1.0.4"
 rand = "0.8"
 libc = "0.2"
+
+[profile.release]
+lto = true
+codegen-units = 1
+strip = "symbols"
