Implement CI and build releases (vibe-kanban 2ef3e91a)
Implement CI and build releases

Please copy the pre-release and logic that allows us to use JS + NPX to distribute the rust binary, with code signing on mac.

You can view some examples in a different repo at /Users/lkw/Documents/repos/vibe-kanban
- .github/workflows/pre-release.yml
- .github/workflows/publish.yml
- npx-cli/bin/cli.js
- npx-cli/package.json

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "mcp-dev-manager"
+name = "dev-manager-mcp"
 version = "0.1.0"
 edition = "2021"
 
 [[bin]]
-name = "mcp-dev-manager"
+name = "dev-manager-mcp"
 path = "src/main.rs"
 
 [dependencies]
